# Spike-Propagation-SNN

./: .gitignore  CMakeLists.txt  README.md  implementation-pipeline.md  thesis_analysis.md
docs/: README_benchmark.md  README_cache_and_metrics.md  README_compiler_flags.md  README_cpu_topology_evaluation.md  README_csv_io.md  README_genn_gpu.md  README_gpu_results.md  README_gpu_validation.md  README_lif_discretization.md  README_lif_neuron.md  README_nest_results.md  README_network_size_justification.md  README_numerical_schemes.md  README_plotting.md  README_results.md  README_running.md  README_sparse_matrix.md  README_topology.md  README_topology_flags.md
include/: benchmark.h  coo_matrix.h  coo_matrix.hpp  csc_matrix.h  csc_matrix.hpp  csr_matrix.h  csr_matrix.hpp  csv_io.h  ell_matrix.h  ell_matrix.hpp  lif_neuron.h  lif_neuron.hpp  network.hpp  sparse_matrix.h  sparse_matrix.hpp  topology.h
python/: plot_results.py  run_sweep.py
results/: benchmark_log_20260419_173916.txt  benchmark_results.csv  csr_benchmark.txt  gpu_benchmark_log_20260419_200640.txt  gpu_results.csv  nest_benchmark.csv
scripts/: genn_benchmark.py  nest_export.py  plot_results.py  run_benchmarks.sh
src/: benchmark.cpp  coo_matrix.cpp  csc_matrix.cpp  csr_matrix.cpp  csv_io.cpp  dump_demo.cpp  ell_matrix.cpp  lif_neuron.cpp  main.cpp  network.cpp  topology.cpp
tests/: CMakeLists.txt  test_formats.cpp  test_lif.cpp  test_topology.cpp
